tests/error/struct_var.mml
let f x = x.i <- 3 in 2
